apps/sonarr/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/sonarr/config"
            server: 10.10.10.10
        - name: persistent-data
          nfs:
            path: "/k8s-volumes/persistent/plex/data"
            server: 10.10.10.10
        - name: ephemeral-data
          nfs:
            path: "/k8s-volumes/ephemeral/plex/data"
            server: 10.10.10.10
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:3.0.10
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 8989
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8989
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 8989
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: false
            - name: ephemeral-data
              mountPath: /ephemeral-data
              readOnly: false
