apps/sonarr/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/sonarr/config"
            server: 10.10.20.10
        - name: persistent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/data"
            server: 10.10.20.10
        - name: ephemeral-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/plex/data"
            server: 10.10.20.10
        - name: qbittorrent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/qbittorrent/data"
            server: 10.10.20.10
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20.3014-ls327@sha256:dffc730adcb8b4f4342792fbb27fcad9c62fb8660523f2aeb082416980d7fe0c
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          ports:
            - containerPort: 8989
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: false
            - name: ephemeral-data
              mountPath: /ephemeral-data
              readOnly: false
            - name: qbittorrent-data
              mountPath: /downloads
              readOnly: false
