apps/sonarr/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-https
spec:
  hostnames:
    - sonarr.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: nginx-fabric
      sectionName: sonarr-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
