apps/sonarr/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - sonarr.nahue.ar
      secretName: sonarr
  rules:
    - host: sonarr.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
